# wgpu-test-3

./: .gitignore  2Primitives.glb  Cargo.toml  Instances.glb  KX.1325.glb  README.md  TODO.md  test1.glb  test2.glb  test3.glb  test4.glb
engine/: Cargo.toml
engine/src/: api.rs  app.rs  fixed_snapshot.rs  fixed_snapshot_handoff.rs  game_trait.rs  global_paths.rs  lib.rs  main.rs  render_snapshot.rs  render_snapshot_handoff.rs  snapshot_handoff.rs  ui_snapshot_handoff.rs  var_snapshot.rs  var_snapshot_handoff.rs
engine/src/game/: animator.rs  build_snapshot.rs  camera.rs  mod.rs  scene_tree.rs  sim.rs
engine/src/game/assets/: game_resources.rs  mod.rs  registry.rs  store.rs
engine/src/host/: mod.rs  renderer.rs  utils.rs  wgpu_context.rs  window.rs
engine/src/host/assets/: manager.rs  mod.rs  store.rs  texture.rs
engine/src/host/gui/: renderer.rs
engine/src/host/renderer/: mod.rs  renderer.rs  sampler_cache.rs  shader_cache.rs
engine/src/host/world/: renderer.rs  (+1 more)
engine/src/job_system/: anim_pose.rs  mod.rs  worker_pool.rs
engine/src/main/: mod.rs  pose_storage.rs  renderer.rs  sampler_cache.rs  shader_cache.rs  utils.rs  wgpu_context.rs  window.rs
engine/src/renderer/: renderer.rs  shader_cache.rs  utils.rs
engine/src/resource_system/: io_manager.rs  mod.rs  render_resources.rs  resource_manager.rs
engine/src/sim/: animator.rs  camera.rs  sim.rs
engine/src/workers/: anim_pose.rs  worker_pool.rs
tools/import_env/: Cargo.toml
tools/import_env/src/: diffuse_irradiance.rs  diffuse_irradiance.wgsl  env_prefilter.rs  env_prefilter.wgsl  equirectangular.rs  main.rs  mipmap.rs  texture.rs
tools/import_gltf/: Cargo.toml
tools/import_gltf/src/: aabb.rs  animations.rs  gltf_utils.rs  main.rs  materials.rs  normals.rs  rig.rs  skeletons.rs
(+245 files in other folders)
