[package]
name = "wgpu-test-3"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.15.0", features = [ "derive" ] }
winit = "0.30.0"
wgpu = "0.19.1"
notify = "6.1.1"
pollster = "0.3.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_repr = "0.1.19"
cgmath = "0.18.0"

