[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
winit = "0.30.0"
wgpu = "0.19.1"
notify = "6.1.1"
pollster = "0.3.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_repr = "0.1.19"
image = "0.25.2"
ddsfile = "0.5.2"
block_compression = "0.5.0"
glam = { version = "0.30.5", features = ["bytemuck", "serde"] }
generational-arena = "0.2.9"
arc-swap = "1.7.1"
crossbeam-queue = "0.3.12"
crossbeam = "0.8.4"
