[package]
name = "import_env"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../../engine" }
glam = { version = "0.30.5", features = ["bytemuck", "serde"] }
bytemuck = { version = "1.15.0", features = ["derive"] }
wgpu = "0.19.1"
pollster = "0.3.0"
ddsfile = "0.5.2"
block_compression = "0.5.0"
image = "0.25.2"
