[package]
name = "import_gltf"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../../engine" }
glam = { version = "0.30.5", features = ["bytemuck", "serde"] }
gltf = "1.4.1"
ddsfile = "0.5.2"
bytemuck = { version = "1.15.0", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_repr = "0.1.19"
mikktspace = "0.3.0"
